// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom tags parse smoke tests  undefined 1`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 42,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 42,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "kind": "sequence",
          "propertyName": "Fn::Base64",
          "tag": "!Base64",
        },
        "end": 42,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 39,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 23,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 21,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests  undefined 2`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 40,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 40,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "kind": "sequence",
          "propertyName": "Fn::Cidr",
          "tag": "!Cidr",
        },
        "end": 40,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 37,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 21,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 19,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests  undefined 3`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 39,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 39,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "kind": "sequence",
          "propertyName": "Fn::And",
          "tag": "!And",
        },
        "end": 39,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 36,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 20,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 18,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests  undefined 4`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 38,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 38,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "kind": "sequence",
          "propertyName": "Fn::If",
          "tag": "!If",
        },
        "end": 38,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 35,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 19,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 17,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests  undefined 5`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 39,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 39,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "kind": "sequence",
          "propertyName": "Fn::Not",
          "tag": "!Not",
        },
        "end": 39,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 36,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 20,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 18,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests  undefined 6`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 38,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 38,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "kind": "sequence",
          "propertyName": "Fn::Or",
          "tag": "!Or",
        },
        "end": 38,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 35,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 19,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 17,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests  undefined 7`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 42,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 42,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "kind": "sequence",
          "propertyName": "Fn::Equals",
          "tag": "!Equals",
        },
        "end": 42,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 39,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 23,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 21,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests  undefined 8`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 31,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 31,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": StringASTNode {
        "customTag": Object {
          "kind": "scalar",
          "propertyName": "Fn::GetAZs",
          "tag": "!GetAZs",
        },
        "end": 31,
        "isKey": false,
        "location": "property",
        "parent": [Circular],
        "start": 18,
        "type": "string",
        "value": "logicVariable",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests  undefined 9`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 73,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 73,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ObjectASTNode {
        "customTag": undefined,
        "end": 73,
        "location": "property",
        "parent": [Circular],
        "properties": Array [
          PropertyASTNode {
            "colonOffset": -1,
            "customTag": undefined,
            "end": 47,
            "key": StringASTNode {
              "customTag": undefined,
              "end": 29,
              "isKey": true,
              "location": "val1",
              "parent": [Circular],
              "start": 25,
              "type": "string",
              "value": "val1",
            },
            "location": null,
            "parent": [Circular],
            "start": 25,
            "type": "property",
            "value": StringASTNode {
              "customTag": undefined,
              "end": 47,
              "isKey": false,
              "location": "val1",
              "parent": [Circular],
              "start": 31,
              "type": "string",
              "value": "logicalVariable1",
            },
          },
          PropertyASTNode {
            "colonOffset": -1,
            "customTag": undefined,
            "end": 71,
            "key": StringASTNode {
              "customTag": undefined,
              "end": 53,
              "isKey": true,
              "location": "val2",
              "parent": [Circular],
              "start": 49,
              "type": "string",
              "value": "val2",
            },
            "location": null,
            "parent": [Circular],
            "start": 49,
            "type": "property",
            "value": StringASTNode {
              "customTag": undefined,
              "end": 71,
              "isKey": false,
              "location": "val2",
              "parent": [Circular],
              "start": 55,
              "type": "string",
              "value": "logicalVariable2",
            },
          },
        ],
        "start": 23,
        "type": "object",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests  undefined 10`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 40,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 40,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "kind": "sequence",
          "propertyName": "Fn::Join",
          "tag": "!Join",
        },
        "end": 40,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 37,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 21,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 19,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests  undefined 11`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 42,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 42,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "kind": "sequence",
          "propertyName": "Fn::Select",
          "tag": "!Select",
        },
        "end": 42,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 39,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 23,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 21,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests  undefined 12`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 41,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 41,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "kind": "sequence",
          "propertyName": "Fn::Split",
          "tag": "!Split",
        },
        "end": 41,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 38,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 22,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 20,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests  undefined 13`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 71,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 71,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ObjectASTNode {
        "customTag": undefined,
        "end": 71,
        "location": "property",
        "parent": [Circular],
        "properties": Array [
          PropertyASTNode {
            "colonOffset": -1,
            "customTag": undefined,
            "end": 45,
            "key": StringASTNode {
              "customTag": undefined,
              "end": 27,
              "isKey": true,
              "location": "val1",
              "parent": [Circular],
              "start": 23,
              "type": "string",
              "value": "val1",
            },
            "location": null,
            "parent": [Circular],
            "start": 23,
            "type": "property",
            "value": StringASTNode {
              "customTag": undefined,
              "end": 45,
              "isKey": false,
              "location": "val1",
              "parent": [Circular],
              "start": 29,
              "type": "string",
              "value": "logicalVariable1",
            },
          },
          PropertyASTNode {
            "colonOffset": -1,
            "customTag": undefined,
            "end": 69,
            "key": StringASTNode {
              "customTag": undefined,
              "end": 51,
              "isKey": true,
              "location": "val2",
              "parent": [Circular],
              "start": 47,
              "type": "string",
              "value": "val2",
            },
            "location": null,
            "parent": [Circular],
            "start": 47,
            "type": "property",
            "value": StringASTNode {
              "customTag": undefined,
              "end": 69,
              "isKey": false,
              "location": "val2",
              "parent": [Circular],
              "start": 53,
              "type": "string",
              "value": "logicalVariable2",
            },
          },
        ],
        "start": 21,
        "type": "object",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests FIND_IN_MAP FIND_IN_MAP 1`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 45,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 45,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "kind": "sequence",
          "propertyName": "Fn::FindInMap",
          "tag": "!FindInMap",
          "type": "FIND_IN_MAP",
        },
        "end": 45,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 42,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 26,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 24,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests GET_ATT GET_ATT 1`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 31,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 31,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": StringASTNode {
        "customTag": Object {
          "kind": "scalar",
          "propertyName": "Fn::GetAtt",
          "tag": "!GetAtt",
          "type": "GET_ATT",
        },
        "end": 31,
        "isKey": false,
        "location": "property",
        "parent": [Circular],
        "start": 18,
        "type": "string",
        "value": "logicVariable",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests REF REF 1`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 28,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 28,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": StringASTNode {
        "customTag": Object {
          "kind": "scalar",
          "propertyName": "Ref",
          "tag": "!Ref",
          "type": "REF",
        },
        "end": 28,
        "isKey": false,
        "location": "property",
        "parent": [Circular],
        "start": 15,
        "type": "string",
        "value": "logicVariable",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;

exports[`custom tags parse smoke tests SUB SUB 1`] = `
ObjectASTNode {
  "customTag": undefined,
  "end": 39,
  "location": null,
  "parent": null,
  "properties": Array [
    PropertyASTNode {
      "colonOffset": -1,
      "customTag": undefined,
      "end": 39,
      "key": StringASTNode {
        "customTag": undefined,
        "end": 8,
        "isKey": true,
        "location": "property",
        "parent": [Circular],
        "start": 0,
        "type": "string",
        "value": "property",
      },
      "location": null,
      "parent": [Circular],
      "start": 0,
      "type": "property",
      "value": ArrayASTNode {
        "customTag": Object {
          "kind": "sequence",
          "propertyName": "Fn::Sub",
          "tag": "!Sub",
          "type": "SUB",
        },
        "end": 39,
        "items": Array [
          StringASTNode {
            "customTag": undefined,
            "end": 36,
            "isKey": false,
            "location": 0,
            "parent": [Circular],
            "start": 20,
            "type": "string",
            "value": "logicalVariable1",
          },
        ],
        "location": "property",
        "parent": [Circular],
        "start": 18,
        "type": "array",
      },
    },
  ],
  "start": 0,
  "type": "object",
}
`;
